# shizuru

./: .clangd  .gitignore  AGENTS.md  CMakeLists.txt  CONTRIBUTING.md  README.md  ROADMAP.md
.kiro/specs/agent-core/: design.md  requirements.md  tasks.md
.kiro/specs/core-decoupling/: design.md  requirements.md  tasks.md
.kiro/specs/runtime-io-redesign/: design.md  requirements.md  tasks.md
api/: CMakeLists.txt  shizuru_api.cpp  shizuru_api.h
core/: CMakeLists.txt
core/context/: config.h  context_strategy.cpp  context_strategy.h  types.h
core/controller/: config.h  controller.cpp  controller.h  types.h
core/interfaces/: audit_sink.h  io_bridge.h  llm_client.h  memory_store.h
core/logging/: logger.cpp
core/policy/: config.h  policy_layer.cpp  policy_layer.h  types.h
core/session/: session.cpp  session.h
examples/: CMakeLists.txt  asr_tts_echo_pipeline.cpp  audio_loopback.cpp  baidu_voice_test.cpp  tool_call.cpp  tts_playout.cpp  voice_agent.cpp
io/: control_frame.h  data_frame.h  io_device.h
io/asr/: asr_device.h  types.h
io/asr/baidu/: baidu_asr_device.cpp  baidu_asr_device.h
io/audio/: CMakeLists.txt  audio_playout_device.cpp  audio_playout_device.h
io/audio/audio_device/: audio_buffer.h  audio_device.h  audio_frame.h  audio_player.h  audio_recorder.h  sample_format.h
io/audio/audio_device/port_audio/: pa_init.cpp  pa_init.h  pa_player.h  pa_recorder.h
io/probe/: CMakeLists.txt  pcm_dump_device.cpp  pcm_dump_device.h
io/tts/: tts_device.h  types.h
io/tts/elevenlabs/: elevenlabs_tts_device.cpp  elevenlabs_tts_device.h
io/vad/: CMakeLists.txt  energy_vad_device.cpp  energy_vad_device.h  vad_device.h  vad_event_device.cpp  vad_event_device.h
runtime/: CMakeLists.txt  agent_runtime.cpp  agent_runtime.h  core_device.cpp  core_device.h  route_table.h  tool_dispatch_device.cpp  tool_dispatch_device.h
services/: CMakeLists.txt
services/asr/: CMakeLists.txt
services/asr/baidu/: CMakeLists.txt  baidu_asr_client.cpp  baidu_asr_client.h
services/audit/: log_audit_sink.h
services/baidu/: CMakeLists.txt  token_manager.cpp  token_manager.h
services/baidu/asr/: baidu_asr_client.cpp  baidu_asr_client.h
services/baidu/tts/: baidu_tts_client.cpp  baidu_tts_client.h
services/io/: CMakeLists.txt  tool_dispatcher.cpp  tool_dispatcher.h  tool_registry.h
services/llm/: CMakeLists.txt  config.h  json_parser.cpp  openai_client.cpp  openai_client.h
services/llm/openai/: CMakeLists.txt  json_parser.cpp  json_parser.h  openai_client.cpp  openai_client.h
services/memory/: in_memory_store.h
services/tts/: CMakeLists.txt
services/tts/baidu/: CMakeLists.txt  baidu_tts_client.cpp  baidu_tts_client.h
services/tts/elevenlabs/: CMakeLists.txt  elevenlabs_client.cpp  elevenlabs_client.h  elevenlabs_tts_device.cpp  elevenlabs_tts_device.h
services/utils/: CMakeLists.txt
services/utils/baidu/: CMakeLists.txt  baidu_config.h  baidu_token_manager.cpp  baidu_token_manager.h
tests/agent/: CMakeLists.txt  context_strategy_prop_test.cpp  context_strategy_test.cpp  controller_prop_test.cpp  controller_test.cpp  policy_layer_prop_test.cpp  policy_layer_test.cpp
tests/agent/mocks/: mock_audit_sink.h  mock_io_bridge.h  mock_llm_client.h  mock_memory_store.h
tests/io/: CMakeLists.txt  control_frame_test.cpp  io_device_control_in_test.cpp  vad_event_device_test.cpp
tests/runtime/: CMakeLists.txt  agent_runtime_prop_test.cpp  agent_runtime_test.cpp  core_device_prop_test.cpp  core_device_test.cpp  tool_dispatch_device_test.cpp
tests/services/: CMakeLists.txt  elevenlabs_tts_device_test.cpp  json_parser_test.cpp  tool_dispatcher_test.cpp
tests/vad/: CMakeLists.txt  vad_test.cpp
ui/: BUILD_WINDOWS.md  README.md  pubspec.yaml  test_tts.dart
ui/bridge/: CMakeLists.txt
ui/lib/: app.dart  main.dart
ui/lib/bridge/: audio_service.dart  baidu_asr_client.dart  baidu_token_manager.dart  baidu_tts_client.dart  bridge_config.dart  shizuru_bridge.dart
ui/lib/models/: agent_state.dart  message.dart  session.dart
ui/lib/pages/: main_layout.dart  settings_page.dart
ui/lib/providers/: app_provider.dart
ui/lib/screens/: settings_screen.dart
ui/lib/widgets/: agent_state_badge.dart  chat_bubble.dart  conversation_view.dart  debug_panel.dart  input_bar.dart  session_sidebar.dart
ui/test/: widget_test.dart
ui/windows/: CMakeLists.txt  copy_bridge.ps1
ui/windows/runner/: Runner.rc  main.cpp
utils/: CMakeLists.txt  async_logger.cpp  async_logger.h
